<?xml version="1.0"?>
<package>
  <name>cv_camera</name>
  <version>0.0.0</version>
  <description>The cv_camera package</description>
  <maintainer email="t.ogura@gmail.com">ogura</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/cv_camera</url>
  <author email="t.ogura@gmail.com">Takashi Ogura</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>

  <run_depend>opencv2</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nodelet</run_depend>

  <export>
    <nodelet plugin="${prefix}/cv_camera_nodelets.xml"/>
  </export>

</package>