<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cv_camera</name>
  <version>0.3.1</version>
  <description>cv_camera uses OpenCV capture object to capture camera image.
  This supports camera_image and nodelet.
  </description>
  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/cv_camera</url>
  <author email="t.ogura@gmail.com">Takashi Ogura</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>message_filters</exec_depend>
  <build_depend>objectdetector_msgs</build_depend>
  <exec_depend>objectdetector_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
